--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "author": "Ariq Pradipa Santoso <ariq.pradipa@outlook.com>",
   "license": "MIT",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
     "vercel-build": "echo 'vercel-build'"
   },
   "dependencies": {
