--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "snip-backend",
   "version": "1.0.0",
   "description": "Backend for snip app",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "repository": "https://github.com/ariqpradipa/snip-backend",
   "author": "Ariq Pradipa Santoso <ariq.pradipa@outlook.com>",
   "license": "MIT",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "build": "tsc",
     "vercel-build": "echo 'vercel-build'"
   },
