--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "vercel-build": "echo 'vercel-build'"
+    "vercel-build": "echo hello",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.3.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "pg": "^8.11.0",
+    "sequelize": "^6.32.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.3.1",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0",
     "sequelize": "^6.32.1",
