--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
+    "version": 2,
     "builds": [
         {
-            "src": "src/index.js",
+            "src": "./index.ts",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/src/index.js"
+            "dest": "/"
         }
     ]
 }
