--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "snip-backend",
   "version": "1.0.0",
   "description": "Backend for snip app",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "repository": "https://github.com/ariqpradipa/snip-backend",
   "author": "Ariq Pradipa Santoso <ariq.pradipa@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node index.ts",
-    "dev": "nodemon index.ts"
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
