--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+node_modules/
+dist/
+*.env*
+
 # Logs
 logs
 *.log
@@ -128,4 +132,3 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-.vercel
