--- a/package.json
+++ b/package.json
@@ -1,30 +1,21 @@
 {
-  "name": "snip-backend",
+  "name": "rest-express",
   "version": "1.0.0",
-  "description": "Backend for snip app",
-  "main": "src/index.ts",
-  "repository": "https://github.com/ariqpradipa/snip-backend",
-  "author": "Ariq Pradipa Santoso <ariq.pradipa@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "dev": "nodemon src/index.ts"
+    "dev": "ts-node src/index.ts"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "pg": "^8.11.0",
-    "sequelize": "^6.32.1"
+    "@prisma/client": "5.7.1",
+    "fastify": "4.25.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.3.1",
-    "nodemon": "^2.0.22",
-    "pg": "^8.11.0",
-    "sequelize": "^6.32.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "@types/node": "20.10.5",
+    "prisma": "5.7.1",
+    "ts-node": "10.9.2",
+    "typescript": "5.3.3"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
