--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
+    "@fastify/env": "^4.3.0",
+    "@fastify/jwt": "^7.2.4",
     "@prisma/client": "5.7.1",
-    "fastify": "4.25.2"
+    "fastify": "4.25.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/node": "20.10.5",
