fix: using dotenv

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "@fastify/cookie": "^9.2.0",
-    "@fastify/env": "^4.3.0",
     "@fastify/jwt": "^7.2.4",
     "@prisma/client": "5.7.1",
+    "dotenv": "^16.3.1",
     "fastify": "4.25.2",
     "jsonwebtoken": "^9.0.2"
   },
