--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "dev": "ts-node src/index.ts",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "vercel-build": "echo 'vercel-build'"
   },
   "dependencies": {
     "@fastify/cookie": "^9.2.0",
