--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
+    "outputDirectory": "build",
     "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "/api/serverless.js"
+            "destination": "/api/serverless.ts"
         }
     ]
 }
